--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -59,17 +59,17 @@
                     <div class="container" id='opportunity-gap' style="display: none;">
                         <div class="row">
                             <div class="col">
-                                <h3>The <span class="strong-no">opportunity gap</span> in <span class="state-name">State</span>:</h3>
-                                There are 
+                                <h3>The <span class="strong-no">digital opportunity gap</span> in <span class="state-name">State</span>:</h3>
+                                There are an estimated 
                                 <span class="inline-number" id="supply">0</span>
-                                unemployed who may not be able to compete for 
+                                unemployed who may not even begin to compete for an estimated 
                                 <span class="inline-number" id="demand">0</span>
                                 open jobs because they lack digital skills. 
 
                                 There is only 
                                 <span class="inline-number" id="dollars">$ 0</span>
-                                in dislocated worker funding available for 
-                                each unemployed person.
+                                in federal dislocated worker funding available for 
+                                each unemployed person in <span class="state-name">State</span>.
                             </div>
                         </div>
                         <!-- <div class="row">
@@ -191,7 +191,7 @@
             </div>
             <div class='row'>
                 <!-- DONT show for now , fix data and JS  -->
-                <div class="col-6" style="display: none;">
+                <div class="col-6">
                     <h1>Explore the data</h1>
                     <div class="container" id="explore_data_container">
                         <h5>Coming soon...</h5>
@@ -201,7 +201,7 @@
                                     </div> -->
                     </div>
                 </div>
-                <div class="col-6" style="display: none;">
+                <div class="col-6">
                     <h1>Read full analysis</h1>
                     <div class="container" id="full_indicator_analysis">
             
