--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <section id="select-map">
                         <div class="wrapper clearfix">
                         
-                            <a href='/pages/us_landing.html'>
+                            <a href='/pages/us_map.html'>
                                 <figure class="gallery-item">
                                     <img src="/img/us.png">
                                     <figcaption class="img-title">
