--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -49,7 +49,7 @@
         <main role="main" class="inner cover">
 
             <!-- State title/ Data tabs row-->
-            <div class="row">
+            <div class="h-100 row">
                 <!-- Left Column  -->
                 <div class="col-6">
                     <h1 class="cover-heading" id="state_name">Select a state.</h1>
@@ -189,24 +189,26 @@
                     <!-- </div> -->
                 </div>
             </div>
-            <div class='row'>
+            </br></br>
+            <div class='row justify-content-md-center'>
                 <!-- DONT show for now , fix data and JS  -->
-                <div class="col-6">
+                <!-- <div class="col-6">
                     <h1>Explore the data</h1>
                     <div class="container" id="explore_data_container">
                         <h5>Coming soon...</h5>
-                        <!-- <h2>GSI Data</h2>
+                        <h2>GSI Data</h2>
                                     <div class="GSI-chart">
                             
                                     </div> -->
-                    </div>
-                </div>
+                    <!-- </div> -->
+                <!-- </div> --> 
                 <div class="col-6">
-                    <h1>Read full analysis</h1>
+                    <h3>Full Report</h3>
                     <div class="container" id="full_indicator_analysis">
             
                     </div>
                 </div>
+
             </div>
             <!-- <div class="row">
                 <div class="col mx-auto">
