--- a/pages/us_landing.html
+++ b/pages/us_landing.html
@@ -55,23 +55,18 @@
                 </ul>
             </nav> -->
         <section id="page_1">
-            <h1>Addressing Digital Skill Needs </h1>
-            <h3>A State-by-State Scorecard</h3>
-            <p class="lead">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, quis!
+            <h1>Addressing Digital Skill Needs: A State-by-State Scorecard</h1>
+            <p>
+                <a href="/pages/us_map.html" type="button" class="btn btn-outline-dark btn-lg">
+                    Search by state
+                </a>
             </p>
-        </section>
-        <section id="about">
-            <h1>About</h1>
-            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, quis!</p>
-        </section>
-        <section id="service">
-            <h1>Service</h1>
-            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, quis!</p>
-        </section>
-        <section id="contact">
-            <h1>Contact</h1>
-            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, quis!</p>
+            <!-- <p>
+                <a href="/pages/us_indicator.html" type="button" class="btn btn-outline-dark btn-lg">
+                    Search by indicator 
+                </a>
+            </p> -->
+            
         </section>
     </div>
     </div>
