--- a/pages/us_indicator.html
+++ b/pages/us_indicator.html
@@ -48,6 +48,13 @@
             </div>
         </header>
         <main role="main" class="inner cover">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/pages/us_landing.html">US Map</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Search by Indicator</li>
+                </ol>
+            </nav>
 
             <!-- State title/ Data tabs row-->
             <div class="row">
@@ -64,14 +71,14 @@
                             <tr>
                                 <td>
                                     <button type="button" class="w-100 btn btn-outline-dark btn-lg indicator" id="1">
-                                        <h5>Does the State track data on digital skills needs?</h5>
+                                        <h5>Which states track data on digital skills needs?</h5>
                                     </button>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
                                     <button type="button" class="w-100 btn btn-outline-dark btn-lg indicator" id="2">  
-                                        <h5>Has the State developed a comprehensive plan to address digital skills needs?
+                                        <h5>Which states have developed a comprehensive plan to address digital skills needs?
                                         </h5>
                                     </button>
                                 </td>
@@ -79,28 +86,36 @@
                             <tr>
                                 <td>
                                     <button type="button" class="w-100 btn btn-outline-dark btn-lg indicator" id="3">
-                                        <h5>Does the State provide online training tool(s)?</h5>
+                                        <h5>Which states provide online training tool(s)?</h5>
+                                    </button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <button type="button" class="w-100 btn btn-outline-dark btn-lg indicator" id="4">
+                                        <h5>Which states provide incumbent worker training funds that can be used for digital skills?</h5>
                                     </button>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
                                     <button type="button" class="w-100 btn btn-outline-dark btn-lg indicator" id="5">
-                                        <h5>Does the State provide technology-related apprenticeship opportunities?</h5>
+                                        <h5>Which states provide technology-related apprenticeship opportunities?</h5>
                                     </button>
                                 </td>
                             </tr>
-                            <tr>
+                            <!-- <tr>
                                 <td>
                                     <button type="button" class="w-100 btn btn-outline-dark btn-lg indicator" id="6">
-                                        <h5>Do community colleges drive digital skills?</h5>
+                                        <h5>In which states do community colleges drive digital skills?</h5>
                                     </button>
                                 </td>
-                            </tr>
+                            </tr> -->
+                            
                             <tr>
                                 <td>
                                     <button type="button" class="w-100 btn btn-outline-dark btn-lg indicator" id="7">
-                                        <h5>Has the State developed a broadband plan?</h5>
+                                        <h5>Which states have developed a broadband plan?</h5>
                                     </button>
                                 </td>
                             </tr>
