com coll and add init

--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -213,6 +213,7 @@
                             <option value="5">Does the State provide technology-related apprenticeship opportunities?</option>
                             <option value="6">Do community colleges drive digital skills?</option>
                             <option value="7">Has the State developed a broadband plan?</option>
+                            <option value="8">Additional digital skills initiatives.</option>
                         </select>
                     </div>
                     <div class="container" id="full_indicator_analysis">
