add blue ribbon state functionality

--- a/pages/more_info.html
+++ b/pages/more_info.html
@@ -69,35 +69,24 @@
 
                                 <!-- Digital Skills -->
                                 <p class="info_p">
-                                    We borrow the 
-                                    <a target="_blank" href="https://blogs.worldbank.org/arabvoices/starting-line-where-does-mena-stand-digital-skills">
-                                        World Bank's definition of digital skills: 
-                                    </a>
-                                    <blockquote class="blockquote">
-                                        <p class="mb-0">
-                                            Digital skills most commonly comprise a continuum of basic, intermediate or advanced skills; and, as we will discuss in
-                                            our next blog on competencies, they may also refer to a range of different abilities, many of which are not only
-                                            'skills' per se, but a combination of behaviors, expertise, know-how, work habits, character traits, dispositions and
-                                            critical understandings.
-                                        </p>
-                                        </br></br>
-                                        <p class="mb-0">
-                                            As laid out by the International Telecommunication Union, Basic Skills are the general ICT skills required "broadly for
-                                            all workers, consumers and citizens in a digital society" — such as word processing or researching online. Building on
-                                            that foundation, Intermediate Skills are "effectively job-ready skills needed to perform more complicated work-related
-                                            functions" such as social media marketing or e-commerce. Advanced or 'Specialist' Skills, which "form the basis of
-                                            specialist occupations and professions," are necessary to test, analyze, manage, or create digitally based products or
-                                            services. These advance skills are needed to harness technology to resolve complex problems, guide others such as
-                                            policymakers, contribute to professional practices, and propose new innovative ideas to advance economic development.
-                                        </p>
-                                        </br></br>
-                                        <p class="mb-0">
-                                            Skills are the supply side of digital labor markets; jobs are the demand side. Digital or ICT work can be conceived in
-                                            three terms: enhanced, dependent, intensive. Some jobs are enhanced by digital tools, whereas with others — such as
-                                            Internet freelancing or call centers — technology is fundamental to the work. Digitally intensive work — such as machine
-                                            learning or app development — requires more specialist and advanced skills.
-                                        </p>
-                                    </blockquote>
+                                    <strong>What does it mean to lack digital skills?</strong>
+                                </p>
+                                <p class="info_p">
+                                    For the purpose of this Scorecard, we follow the 
+                                    <a target="_blank" href="https://www.nationalskillscoalition.org/resources/publications/file/New-Digital-Landscape-web.pdf">
+                                        National Skills Coalition’s
+                                    </a> use of the term which encompasses those who
+                                    either have no, or limited, digital skills, as follows:
+                                </p>
+                                <p class="info_p">
+                                    <strong>No digital skills: </strong>People with no digital skills failed to meet one or more of the three baseline criteria to even take the full digital
+                                    skills assessment: 1) prior computer use, 2) willingness to take the computer-based assessment, or 3) ability to
+                                    complete four out of six very basic computer tasks, such as using a mouse or highlighting text on screen.
+                                </p>
+                                <p class="info_p">
+                                    <strong>Limited digital skills: </strong>People with limited digital skills can complete only very simple digital tasks that have a generic interface and just a
+                                    few steps. As an example, people at this level would have a difficult time sorting email responses to an event
+                                    invitation into pre-existing folders to keep track of who can and cannot attend an event.
                                 </p>
 
                             </div>
