--- a/pages/us_indicator.html
+++ b/pages/us_indicator.html
@@ -128,23 +128,8 @@
                     <div class="map" id="us_map">
 
                     </div>
-                    <div class="container" id='opportunity-gap' style="display: none;">
-                        <div class="row">
-                            <div class="col">
-                                <h3>The <span class="strong-no">digital opportunity gap</span> in <span
-                                        class="state-name">State</span>:</h3>
-                                There are an estimated
-                                <span class="inline-number" id="supply">0</span>
-                                unemployed who may not even begin to compete for an estimated
-                                <span class="inline-number" id="demand">0</span>
-                                open jobs because they lack digital skills.
+                    <div class="container" id='blue-ribbons'>]
 
-                                There is only
-                                <span class="inline-number" id="dollars">$ 0</span>
-                                in federal dislocated worker funding available for
-                                each unemployed person in <span class="state-name">State</span>.
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
