change some language

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <nav class="nav nav-masthead justify-content-center">
                     <a class="nav-link" href="/pages/us_landing.html" id="US">US</a>
                     <a class="nav-link" href="/pages/world_map.html" id="world">World</a>
-                    <a class="nav-link" href="/pages/more_info.html" id="More Info">More Info</a>
+                    <a class="nav-link" href="/pages/more_info.html" id="More Info">Methodology</a>
                     <a class="nav-link inactive">(Beta Version)</a>
                 </nav>
             </div>
@@ -57,7 +57,7 @@
             <div class="row justify-content-md-center">
                 <div class="col-6">
                     <section id="page_1">
-                        <h1>Welcome to the Digital Skilling Scorecard</h1>
+                        <h1>Welcome to the Digital Skills Scorecard</h1>
                         <p class="lead">
                             The changing global economy demands that more of today’s workers have at least basic digital skills in order to be
                             employed.
