--- a/pages/us_landing.html
+++ b/pages/us_landing.html
@@ -40,7 +40,7 @@
             <nav class="nav nav-masthead justify-content-center">
                 <a class="nav-link active" href="/pages/us_map.html" id="US">US</a>
                 <a class="nav-link" href="/pages/world_map.html" id="world">World</a>
-                <a class="nav-link" href="/pages/more_info.html" id="More Info">More Info</a>
+                <a class="nav-link" href="/pages/more_info.html" id="More Info">Methodology</a>
                 <a class="nav-link inactive">(Beta Version)</a>
             </nav>
         </div>
