--- a/pages/us_indicator.html
+++ b/pages/us_indicator.html
@@ -128,7 +128,7 @@
                     <div class="map" id="us_map">
 
                     </div>
-                    <div class="container" id='blue-ribbons'>]
+                    <div class="container" id='blue-ribbons'>
 
                     </div>
                 </div>
