--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -68,38 +68,38 @@
                             <div class="col">
                                 <h3>The <span class="strong-no">digital opportunity gap</span> in <span class="state-name">State</span>:</h3>
                                 There are an estimated 
-                                <span class="inline-number" id="unemployed">0</span>*
+                                <span class="inline-number" id="unemployed">0</span><sup>1</sup>
                                 unemployed, of which 
-                                <span class="inline-number" id="supply">0</span>**
+                                <span class="inline-number" id="supply">0</span><sup>2</sup>
                                 may not even begin to compete for an estimated 
-                                <span class="inline-number" id="demand">0</span>***
+                                <span class="inline-number" id="demand">0</span><sup>3</sup>
                                 open jobs because they lack digital skills. 
 
                                 There is only 
-                                <span class="inline-number" id="dollars">$ 0</span>****
+                                <span class="inline-number" id="dollars">$0</span><sup>4</sup>
                                 in federal dislocated worker funding available for 
                                 each unemployed person in <span class="state-name">State</span>.
                             </br></br>
                                 <div>
                                     <p class="number-definition">
-                                        *<a target="_blank" class="number-link" href="https://www.bls.gov/news.release/laus.nr0.htm">
+                                        <sup>1</sup><a target="_blank" class="number-link" href="https://www.bls.gov/news.release/laus.nr0.htm">
                                             Bureau of Labor Statistics, December 2020
                                         </a>
                                     </br>
-                                        **Estimate based upon
+                                        <sup>2</sup>Estimate based upon
                                         <a target="_blank" class="number-link" href="https://www.nationalskillscoalition.org/news/blog/nearly-1-in-3-workers">
                                             National Skills Coalition finding
                                         </a>
                                         that nearly one in three workers lack foundation digital skills.
                                     </br>
-                                        ***This metric counts the number of jobs open on LinkedIn on the first week of January 2021. Based on the job
+                                        <sup>3</sup>This metric counts the number of jobs open on LinkedIn on the first week of January 2021. Based on the job
                                         description,
                                         these jobs explicitly require digital skills or certifications.
                                         <a target="_blank" class="number-link"href="https://economicgraph.linkedin.com/blog/trends-in-digital-talent">
                                             Read More
                                         </a>
                                     </br>
-                                        ****Based upon
+                                        <sup>4</sup>Based upon
                                         <a target="_blank" class="number-link" href="https://www.dol.gov/sites/dolgov/files/ETA/budget/pdfs/20dw%24.pdf">
                                             Program Year 2020 WIOA Dislocated Worker Activities State Allotments
                                         </a>
