--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -67,13 +67,14 @@
                         <div class="row">
                             <div class="col">
                                 <h3>The <span class="strong-no">digital opportunity gap</span> in <span class="state-name">State</span>:</h3>
-                                There are an estimated 
+                                There are 
                                 <span class="inline-number" id="unemployed">0</span><sup>1</sup>
-                                unemployed, of which 
+                                unemployed individuals in <span class="state-name">State</span> of which at least  
                                 <span class="inline-number" id="supply">0</span><sup>2</sup>
-                                may not even begin to compete for an estimated 
+                                lack foundational digital skills. 
+                                These individuals may not even begin to compete for an estimated 
                                 <span class="inline-number" id="demand">0</span><sup>3</sup>
-                                open jobs because they lack digital skills. 
+                                job openings which require such skills. 
 
                                 There is only 
                                 <span class="inline-number" id="dollars">$0</span><sup>4</sup>
@@ -92,7 +93,11 @@
                                         </a>
                                         that nearly one in three workers lack foundation digital skills.
                                     </br>
-                                        <sup>3</sup>This metric counts the number of jobs open on LinkedIn on the first week of January 2021. Based on the job
+                                        <sup>3</sup>This metric counts the number of jobs open on 
+                                        <a target="_blank" class="number-link" href="https://economicgraph.linkedin.com/blog/trends-in-digital-talent">
+                                            LinkedIn
+                                        </a>
+                                        on the first week of January 2021. Based on the job
                                         description,
                                         these jobs explicitly require digital skills or certifications.
                                         <a target="_blank" class="number-link"href="https://economicgraph.linkedin.com/blog/trends-in-digital-talent">
