Developed broadband plan that addresses digital skills

--- a/pages/us_indicator.html
+++ b/pages/us_indicator.html
@@ -115,7 +115,7 @@
                             <tr>
                                 <td>
                                     <button type="button" class="w-100 btn btn-outline-dark btn-lg indicator" id="7">
-                                        <h5>Which states have developed a broadband plan?</h5>
+                                        <h5>Which states have developed a broadband plan that addresses digital skills?</h5>
                                     </button>
                                 </td>
                             </tr>
