--- a/pages/us_map.html
+++ b/pages/us_map.html
@@ -201,7 +201,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <h5>Has the State developed a broadband plan?</h5>
+                                    <h5>Has the State developed broadband plan that addresses digital skills?</h5>
                                 </td>
                             </tr>
                         </tbody>
