--- a/pages/us_overview.html
+++ b/pages/us_overview.html
@@ -108,7 +108,7 @@
 
                                 <span class="inline-number" id="indicator_7">0</span>
                                 out of <span class="inline-number">50</span> states
-                                have developed a broadband plan.
+                                have developed broadband plan that addresses digital skills.
                                 </br>
                                 </br>
 
