--- a/pages/us_landing.html
+++ b/pages/us_landing.html
@@ -106,7 +106,7 @@
                 
                     <span class="inline-number" id="indicator_7">0</span>
                     out of <span class="inline-number">50</span> states
-                    have developed a broadband plan.
+                    have developed broadband plan that addresses digital skills.
                     </br>
                     </br>
 
