update labor data

--- a/pages/us_overview.html
+++ b/pages/us_overview.html
@@ -76,7 +76,7 @@
                                 There is only
                                 <span class="inline-number" id="dollars">$???</span><sup>4</sup>
                                 in federal dislocated worker funding available for
-                                each unemployed person in <span class="state-name">State</span>.
+                                each unemployed person nationally.
                                 </br></br>
 
                                 <h3>Indicator summaries</h3>
@@ -118,7 +118,7 @@
                                     <p class="number-definition">
                                         <sup>1</sup><a target="_blank" class="number-link"
                                             href="https://www.bls.gov/news.release/laus.nr0.htm">
-                                            Bureau of Labor Statistics, December 2020
+                                            Bureau of Labor Statistics, January 2021
                                         </a>
                                         </br>
                                         <sup>2</sup>Estimate based upon
